# infino

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  public-api.txt
.devin/: wiki.json
.github/workflows/: ci.yml  publish-python.yml  supertable-bench-azure.yml
benches/: README.md
benches/bench/: main.rs
benches/fts/: main.rs
benches/object_store/: main.rs
benches/scale/: main.rs  vector_recall.rs
benches/sql/: main.rs
benches/sql_diag/: main.rs
benches/supertable/: main.rs
benches/supertable_update/: main.rs
benches/tombstone_overhead/: main.rs
benches/utils/: Cargo.toml  corpus.rs  executors.rs  fts_superfile.rs  markdown.rs  mod.rs  report.rs  rss.rs  sql_bench.rs  sql_diag.rs  superfile.rs  supertable.rs  supertable_bench.rs  tiers.rs  unified_object_store.rs  vector_superfile.rs
benches/utils/fixture/: mod.rs  supertable.rs
benches/utils/harness/: driver.rs  infino_engine.rs  infino_sql_engine.rs  infino_vector_engine.rs  mod.rs  sql_driver.rs  vector_driver.rs
benches/utils/ingest/: supertable.rs
benches/vector/: main.rs
docs/architecture/: supertable.md
examples/: demo.rs  profile_fts_build.rs
infino-node/__test__/: smoke.test.mjs
infino-node/infino/: index.ts
infino-node/src/: lib.rs
infino-python/: README.md  pyproject.toml
infino-python/src/: lib.rs
infino-python/tests/: test_smoke.py
src/: lib.rs
src/catalog/: mod.rs
src/config/: mod.rs
src/storage/: local_fs.rs
src/superfile/: builder.rs  reader.rs
src/superfile/fts/: builder.rs  reader.rs
src/superfile/vector/: distance.rs
src/supertable/: error.rs  handle.rs  mod.rs  writer.rs
src/supertable/compaction/: mod.rs
src/supertable/manifest/: encoding.rs  mod.rs
src/supertable/optimize/: mod.rs
src/supertable/query/: dispatch.rs  fts.rs  sql.rs  vector.rs
src/supertable/query/exec/: common.rs  fts_exec.rs  hybrid_exec.rs  vector_exec.rs
src/supertable/wal/: recovery_sweep_tests.rs
tests/: supertable_commit_crash_localfs.rs
tests/superfile/fts/: brute_force_oracle.rs
tests/supertable/: compact_gc.rs  writer_mutations.rs
tests/supertable/commit/: id_uniqueness.rs  open_refresh.rs  persistence.rs
tests/supertable/query/: brute_force_oracle.rs  fanout_concurrency.rs  fanout_floor.rs  hierarchical.rs  id_resolve.rs  mod.rs  skip_pruning.rs  tombstone_filter.rs
tests/supertable/storage/: compact_azure.rs  smoke_azure.rs  smoke_s3.rs
