[package]
name = "infino-bench-utils"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
path = "mod.rs"
bench = false

[[bin]]
name = "profile_superfile"
path = "bin/profile_superfile.rs"
bench = false


[dependencies]
arrow-array = "58"
arrow-schema = "58"
async-trait = "0.1"
bytemuck = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
datafusion = "53"
futures = "0.3"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
infino = { path = "../..", features = ["test-helpers"] }
# Already in the tree via infino's default mimalloc allocator; the
# direct dep only exposes mi_collect so the RSS sampler can purge
# allocator-retained pages before each measurement window.
libmimalloc-sys = { version = "0.1", features = ["extended"] }
memmap2 = "0.9"
num_cpus = "1"
object_store = { version = "0.13", features = ["aws"] }
parquet = "58"
rand = "0.10"
rand_distr = "0.6"
rayon = "1"
s3s = "0.13"
s3s-fs = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
